--- a/composer.json
+++ b/composer.json
@@ -5,14 +5,15 @@
         "sort-packages": true
     },
     "require": {
-        "php": "~7.1.3||~7.2.0",
+        "php": "~7.1.3||~7.2.0||~7.3.0",
         "magento/framework": "102.0.*",
         "magento/module-checkout": "100.3.*",
         "magento/module-customer": "102.0.*",
         "magento/module-payment": "100.3.*",
         "magento/module-quote": "101.1.*",
         "magento/module-sales": "102.0.*",
-        "magento/module-store": "101.0.*"
+        "magento/module-store": "101.0.*",
+        "magento/module-theme": "101.0.*"
     },
     "type": "magento2-module",
     "license": [
@@ -27,5 +28,5 @@
             "Magento\\Vault\\": ""
         }
     },
-    "version": "101.1.2"
+    "version": "101.1.4"
 }
